testing zoom fix on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,11 +46,13 @@ $themes: (
 
 html,
 body {
+  width: 100vw;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .App {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
